--- a/page3/index.html
+++ b/page3/index.html
@@ -32,7 +32,7 @@
 
         <input class="form__item"
                placeholder="Name"
-               type="Name">
+               type="text">
 
         <select class="form__item form__item_species">
             <option value="Species" disabled selected>Species</option>
@@ -41,9 +41,7 @@
         </select>
 
         <input class="form__item form__item_birthday"
-               type="text"
-               name="Birthday"
-               placeholder="Birthday">
+               placeholder="Birthday" type="text">
     </form>
 
 
