--- a/page3/index.html
+++ b/page3/index.html
@@ -1,47 +1,48 @@
 <!doctype html>
-<html lang="en">
+<html lang='en'>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link href="normalize.css" rel="stylesheet" type="text/css">
-    <link href="index.css" rel="stylesheet" type="text/css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500&display=swap" rel="stylesheet">
+    <meta charset='UTF-8'>
+    <meta name='viewport'
+          content='width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0'>
+    <meta http-equiv='X-UA-Compatible' content='ie=edge'>
+    <link href='normalize.css' rel='stylesheet' type='text/css'>
+    <link href='index.css' rel='stylesheet' type='text/css'>
+    <link rel='preconnect' href='https://fonts.googleapis.com'>
+    <link rel='preconnect' href='https://fonts.gstatic.com' crossorigin>
+    <link href='https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500&display=swap' rel='stylesheet'>
     <title>Page3</title>
 </head>
 <body>
-<header class="interface container ">
 
-    <svg class="interface__arrow" width="24" height="24" viewBox="0 0 24 24" fill="none"
-         xmlns="http://www.w3.org/2000/svg">
-        <path d="M10.0927 8.4773C10.4306 8.13935 10.4306 7.59142 10.0927 7.25347C9.75474 6.91551 9.2068 6.91551 8.86885 7.25347L4.25347 11.8688C4.08449 12.0378 4 12.2593 4 12.4808C4 12.5981 4.02335 12.71 4.06566 12.812C4.10789 12.9141 4.1705 13.0097 4.25347 13.0927L8.86885 17.7081C9.2068 18.046 9.75474 18.046 10.0927 17.7081C10.4306 17.3701 10.4306 16.8222 10.0927 16.4842L6.95461 13.3462H18.1346C18.6126 13.3462 19 12.9587 19 12.4808C19 12.0028 18.6126 11.6154 18.1346 11.6154H6.95461L10.0927 8.4773Z"
-              fill="#332317"/>
+<header class='interface container '>
+
+    <svg class='interface__arrow' width='24' height='24' viewBox='0 0 24 24' fill='none'
+         xmlns='http://www.w3.org/2000/svg'>
+        <path
+            d='M10.0927 8.4773C10.4306 8.13935 10.4306 7.59142 10.0927 7.25347C9.75474 6.91551 9.2068 6.91551 8.86885 7.25347L4.25347 11.8688C4.08449 12.0378 4 12.2593 4 12.4808C4 12.5981 4.02335 12.71 4.06566 12.812C4.10789 12.9141 4.1705 13.0097 4.25347 13.0927L8.86885 17.7081C9.2068 18.046 9.75474 18.046 10.0927 17.7081C10.4306 17.3701 10.4306 16.8222 10.0927 16.4842L6.95461 13.3462H18.1346C18.6126 13.3462 19 12.9587 19 12.4808C19 12.0028 18.6126 11.6154 18.1346 11.6154H6.95461L10.0927 8.4773Z'
+            fill='#332317' />
     </svg>
-
-    <h1 class="interface__title">Create</h1>
+    <h1 class='interface__title'>Create</h1>
 
 </header>
 
-<main class="container">
+<main class='container'>
 
 
-    <form class="form">
+    <form class='form'>
 
-        <input class="form__item"
-               placeholder="Name"
-               type="text">
+        <input class='form__item'
+               placeholder='Name'
+               type='text'>
 
-        <select class="form__item form__item_species">
-            <option value="Species" disabled selected>Species</option>
+        <select class='form__item form__item_species'>
+            <option value='Species' disabled selected>Species</option>
             <option>Fat</option>
             <option>Slender</option>
         </select>
 
-        <input class="form__item form__item_birthday"
-               placeholder="Birthday" type="text">
+        <input class='form__item form__item_birthday'
+               placeholder='Birthday' type='text'>
     </form>
 
 
